Add endpoints for CRUD operations  (#25)
* Add ORM

* Update common.yml

* Add endpoints to handle CRUD and login for users

* Changing Image model

* Fixing User model

* Fix errors in user routers

* Fix user login

* Fix and update reminder API

* Fix typescript compilation errors

* Fix typescript and other errors

* Fix typescript compilation errors

---------
