# api/src/api/routes/user.ts
@@ -1,10 +1,15 @@
-import { User } from '../../models/user';
-import { Router } from 'express';
-const Crypto = require('crypto');
-export const users = Router();
-const passport = require('passport');
+import User from '../../models/user.model';
+import { type RequestHandler, Router } from 'express';
+import reminderRouter from './reminder';
+import '../../lib/passport';
+import Crypto from 'crypto';
+import passport from 'passport';
 
-users.post('/', async (req, res, next) => {
+const userRouter = Router();
+
+userRouter.use('/:idUser/reminder', reminderRouter);
+
+userRouter.post('/', (async (req, res, next) => {
   const body = req.body;
   const password = body.password;
   delete body.password;
@@ -13,43 +18,47 @@ users.post('/', async (req, res, next) => {
     const pass = createPassword(password);
     user.salt = pass.salt;
     user.hash = pass.hash;
-    user.save().then(user => {
-      return res.status(201).json(toAuthJSON(user));
-    }).catch(next);
+    user.userName = user.userName.toLocaleLowerCase();
+    user
+      .save()
+      .then((user) => {
+        return res.status(201).json(toAuthJSON(user));
+      })
+      .catch(next);
   } catch (e) {
     next(e);
   }
-});
+}) as RequestHandler);
 
-users.get('/', async (req, res, next) => {
+userRouter.get('/', (async (req, res, next) => {
   try {
     res.json(await User.findAll());
   } catch (e) {
     next(e);
   }
-});
+}) as RequestHandler);
 
-users.get('/:id', async (req, res, next) => {
-  const body = req.body;
-  User.findOne({ where: { username: req.params.id } })
-    .then(user => {
+userRouter.get('/:idUser', (async (req, res, next) => {
+  User.findOne({ where: { id: req.params.idUser } })
+    .then((user) => {
       if (!user) {
-        return res.status(401).send('No se encontró el usuario.');
+        return res
+          .status(401)
+          .send(`The user ${req.params.idUser} wasn't found `);
       }
       const response = {
         username: user.userName,
         name: user.name,
         lastname: user.lastName,
         id: user.id,
-        images: user.images,
         reminders: user.reminders,
-        patients: user.patients
       };
       return res.json(response);
-    }).catch(next);
-});
+    })
+    .catch(next);
+}) as RequestHandler);
 
-users.put('/:id', async (req, res, next) => {
+userRouter.patch('/:idUser', (async (req, res, next) => {
   const body = req.body;
   if ('password' in body) {
     const pass = createPassword(body.password);
@@ -57,63 +66,82 @@ users.put('/:id', async (req, res, next) => {
     body.hash = pass.hash;
     body.salt = pass.salt;
   }
-  User.update(body, { where: { id: req.params.id } })
-    .then(user => {
-      res.status(201).send(`Se modifico el usuario ${user}`);
-    }).catch(next);
-});
+  body.userName = body.userName.toLocaleLowerCase();
+  User.update(body, { where: { id: req.params.idUser } })
+    .then(() => {
+      res
+        .status(201)
+        .send(`The user ${req.params.idUser} was updated successfully`);
+    })
+    .catch(next);
+}) as RequestHandler);
 
-users.delete('/:id', async (req, res, next) => {
-  const body = req.body;
-  User.destroy({
+userRouter.delete('/:idUser', (async (req, res, next) => {
+  await User.destroy({
     where: {
-      id: body.id
-    }
-  }).then(user =>
-    res.status(201).send(`Se elimino el usuario ${user}`));
-});
+      id: req.params.idUser,
+    },
+  });
+  res
+    .status(201)
+    .send(`The user ${req.params.idUser} was deleted successfully`);
+}) as RequestHandler);
 
-users.post('/login', async (req, res, next) => {
-  const body = req.body;
-  if (!req.body.email) {
-    return res.status(422).json({ error: 'El email es requerido' });
+userRouter.post('/login', (async (req, res, next) => {
+  if (req.body.userName == null) {
+    return res.status(422).json({ error: 'The user is required' });
   }
 
-  if (!req.body.password) {
-    return res.status(422).json({ error: 'La contraseña es requerida' });
+  if (req.body.password == null) {
+    return res.status(422).json({ error: 'The password is required' });
   }
 
-  passport.authenticate('local', { session: false }, function (err, user, info) {
-    if (err) {
-      next(err); return;
-    }
+  passport.authenticate(
+    'local',
+    { session: false },
+    function (err: Error, user: User, info: any) {
+      if (err != null) {
+        next(err);
+        return;
+      }
 
-    if (user) {
-      return res.json({ user: toAuthJSON(user) });
-    } else {
-      return res.status(422).json(info);
-    }
-  })(req, res, next);
-});
+      if (user != null) {
+        return res.json({ user: toAuthJSON(user) });
+      } else {
+        return res.status(422).json(info);
+      }
+    },
+  )(req, res, next);
+}) as RequestHandler);
 
 const createPassword = function (password: string) {
   const salt = Crypto.randomBytes(16).toString('hex');
-  const hash = Crypto
-    .pbkdf2Sync(password, salt, 10000, 512, 'sha512')
-    .toString('hex');
+  const hash = Crypto.pbkdf2Sync(password, salt, 10000, 512, 'sha512').toString(
+    'hex',
+  );
   return { salt, hash };
 };
 
-export const validatePassword = function (password: string, salt: string, hash: string) {
-  const hashVerify = Crypto
-    .pbkdf2Sync(password, salt, 10000, 512, 'sha512')
-    .toString('hex');
+export const validatePassword = function (
+  password: string,
+  salt: string,
+  hash: string,
+) {
+  const hashVerify = Crypto.pbkdf2Sync(
+    password,
+    salt,
+    10000,
+    512,
+    'sha512',
+  ).toString('hex');
   return hash === hashVerify;
 };
 
-export const toAuthJSON = function(user: User) {
+export const toAuthJSON = function (user: User) {
   return {
     username: user.userName,
     id: user.id,
   };
 };
+
+export default userRouter;
